# Logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Ubuntu.yml  install.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
documentation/: CMakeLists.txt
documentation/pages/: about.dox
include/logger/: logger.h
src/logger/: logger.cpp
test/: CMakeLists.txt
test/src/: logger.cpp
